--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,11 +19,21 @@ Version 0.1.3 Upload 05.17.2017 @ 2000MT -W. McDonald:
     Combined `README.md` and Peter's `READ_ME.txt.txt` into `README.md`.
     Reformatted the README into Markdown and edited contents for clarity.
 
-Version 0.2.0 Upload 05.18.2017 @ 0900MT -M.S. Martin:
+Version UPDATE 0.2.0 Upload 05.18.2017 @ 0900MT -M.S. Martin:
     Removed exterior zero data files so plot will only display useful
     information and interior NO_DATA sets
     Automatically delete all zero data files include plots
 
+Version 0.2.0 Upload 05.19.2017 @ 0850MT -M.S. Martin:
+    Attempting to fix GUI closing issue
+    This code loops but does not allow for multiple user inputs
+    Plots do not appear in GUI yet
+    Exit button completely functional
+
 Version 0.2.1 Upload 05.22.2017 1030MT -W. McDonald:
     Moved Version History from README.md to Changelog.txt
 
+Version 0.2.2 Upload 05.22.2017 1145MT -M.S. Martin:
+    Code updated to allow for multiple user inputs until Exit button is pressed
+    Fixed bugs having to do with file paths
+    Nuclear structure data fully operational but no error bars
