--- a/Changelog.txt
+++ b/Changelog.txt
@@ -49,3 +49,7 @@ Version 0.2.4 Upload 05.25.2017 1015MT -M.S. Martin:
 Version UPDATE 0.3.0 05.25.2017 1130MT -M.S. Martin:
     Updated code to run using python3
     Fixed bugs with plotting many elements
+
+Version 0.3.1 05.26.2017 1330MT -M.S. Martin:
+    Included atomic binding energy scaling factors
+    Fixed bugs
