--- a/Changelog.txt
+++ b/Changelog.txt
@@ -94,3 +94,8 @@ Version 0.5.2 06-25-2017 1545MT -W. McDonald:
 Version 0.5.3 06-26-2017 0900MT -M.S. Martin:
     Changed GUIs and updated plotting
     Added comments and fixed bugs
+
+Version 0.5.4 06-29-2017 1100MT -M.S. Martin:
+	Updated GUIs
+	Added new logo
+	Changed plot naming
