--- a/Changelog.txt
+++ b/Changelog.txt
@@ -96,11 +96,16 @@ Version 0.5.3 06-26-2017 0900MT -M.S. Martin:
     Added comments and fixed bugs
 
 Version 0.5.4 06-29-2017 1100MT -M.S. Martin:
-	Updated GUIs
-	Added new logo
-	Changed plot naming
+    Updated GUIs
+    Added new logo
+    Changed plot naming
 
 Version 0.5.5 06-29-2017 1600MT -W. McDonald:
     States with non-numeric uncertainty in energy are now flagged with '[]'
     States with unknown GS energy display a spin of 'X' and their excited states are suppressed
     Fixed bug where a GS might not plot if it were the only state filtered for that isotope
+
+Version 0.6.0 07-26-2017 1200MT -W. McDonald:
+    Beta Decay information is now extracted from ensdf files
+	Data files no longer rewritten in ionization and mass_data
+	Branching ratio information is now shown on decay plots
