--- a/Changelog.txt
+++ b/Changelog.txt
@@ -107,9 +107,11 @@ Version 0.5.5 06-29-2017 1600MT -W. McDonald:
 
 Version 0.6.0 07-26-2017 1200MT -W. McDonald:
     Beta Decay information is now extracted from ensdf files
-	Data files no longer rewritten in ionization and mass_data
-	Branching ratio information is now shown on decay plots
+    Data files no longer rewritten in ionization and mass_data
+    Branching ratio information is now shown on decay plots
 
 Version 0.6.1 10-14-2017 2300MT -W. McDonald:
+    Program officially named Complete Evaluated Database Extraction Tool or
+	CENDET (+20 GNAR points)
     Extracted data is now stored using LevelRecord or DecayRecord class instances rather than lists
     Extracted data is accessed via class attributes rather than list indices
